Preserve deterministic trap snapshot order